# shadow-asset

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
.claude/skills/reset-db/: SKILL.md
.claude/tasks/asset-allocation-page/: plan.md
.claude/tasks/csv-import/: plan.md  review.md
.claude/tasks/export-import/: plan.md  review.md
.claude/tasks/mf-asset-history/: plan.md  review.md
.claude/tasks/mvp/: plan.md  review.md
.claude/tasks/public-pension-paid/: plan.md  review.md
.claude/tasks/target-judgment-traffic-light/: plan.md  review.md
docs/: SPEC.md
scripts/: init-db.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  util.rs
src-tauri/src/commands/: accounts.rs  allocation.rs  csv_import.rs  export_import.rs  holdings.rs  manual_assets.rs  mf_import.rs  mod.rs  prices.rs  settings.rs  snapshots.rs
src-tauri/src/pricing/: crypto.rs  forex.rs  fund.rs  gold.rs  mod.rs  yahoo.rs  yahoo_types.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/accounts/: page.tsx
src/app/api/accounts/: route.ts
src/app/api/holdings/: route.ts
src/components/allocation/: ManualAssetForm.tsx  ManualAssetList.tsx  TargetJudgment.tsx
src/components/dashboard/: AccountList.tsx  AssetHistory.tsx  CategoryBreakdownChart.tsx  ManualAssetSummary.tsx  TotalAssets.tsx
src/hooks/: useAllocation.ts  usePortfolio.ts
src/lib/: api.ts  db.ts  format.ts  presets.ts  pricing.ts  types.ts
src/pages/: Accounts.tsx  Allocation.tsx  Dashboard.tsx
(+2 files in other folders)
